@@ -106,7 +106,9 @@ loaded."
 		  (let ((s (format nil "~&Caught ~a at the top level. Please report this." c)))
 		    (write-line s)
 		    (echo-string (current-screen) s)))
-		 (:break (invoke-debugger c))))))))))
+		 (:break (invoke-debugger c))
+		 (:abort
+		  (throw :quit (format nil "~&Caught ~a at the top level. Please report this." c)))))))))))
 
 (defun parse-display-string (display)
   "Parse an X11 DISPLAY string and return the host and display from it."
